<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="25dp"
    >



    <TextView
        android:id="@+id/labelNom"
        android:text="@string/nom"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@id/nom"
        android:layout_alignBottom="@id/nom"
        android:textSize="22sp"
        android:paddingTop="6dp"
        />


    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_nom"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/labelNom"
        android:layout_marginStart="10dp"
        />


    <TextView
        android:id="@+id/labelPrenom"
        android:text="@string/prenom"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@id/prenom"
        android:layout_alignBottom="@id/prenom"
        android:textSize="22sp"
        android:paddingTop="6dp"
        />


    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_prenom"
        android:layout_below="@+id/nom"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/labelPrenom"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/labelAge"
        android:text="@string/age"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@id/age"
        android:layout_alignBottom="@id/age"
        android:textSize="22sp"
        android:paddingTop="6dp"
        />


    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_age"
        android:layout_below="@+id/prenom"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_toEndOf="@id/labelAge"
        android:layout_marginStart="10dp"
        />


    <TextView
        android:id="@+id/labelDomain"
        android:text="@string/domaine"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@id/domain"
        android:layout_alignBottom="@id/domain"
        android:textSize="22sp"
        android:paddingTop="6dp"
        />

    <EditText
        android:id="@+id/domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_domaine"
        android:layout_below="@+id/age"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/labelDomain"
        android:layout_marginStart="10dp"
        />


    <TextView
        android:id="@+id/labelNumTel"
        android:text="@string/num_tel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@id/numtel"
        android:layout_alignBottom="@id/numtel"
        android:textSize="22sp"
        android:paddingTop="6dp"
        />

    <EditText
        android:id="@+id/numtel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_votre_num_de_tel"
        android:layout_below="@+id/domain"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_toEndOf="@id/labelNumTel"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/submitButton"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numtel"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        android:layout_centerInParent="true"/>

</RelativeLayout>