<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2"
    android:padding="5dp">


    <TextView
        android:id="@+id/identite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/vous_etes"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        />

    <TextView
        android:id="@+id/nom"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/identite"
        android:layout_marginTop="5dp"
        />


    <TextView
        android:id="@+id/prenom"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/nom"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/identite2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:text="@string/vous_avez"
        android:layout_centerInParent="true"
        android:layout_below="@id/prenom"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/age"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/identite2"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/identite2bis"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:text="@string/ans"
        android:layout_toEndOf="@id/age"
        android:layout_alignTop="@id/age"
        />


    <TextView
        android:id="@+id/identite3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:text="@string/vous_travaillez"
        android:layout_centerInParent="true"
        android:layout_below="@id/age"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/domain"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/identite3"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/identite4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/votre_numero"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/domain"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/numtel2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/identite4"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/okButton"
        style="@android:style/Widget.Button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/retourButton"
        style="@android:style/Widget.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/retour"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        />

</RelativeLayout>